@@ -16,6 +16,7 @@
 - Fix: [#14449] Surface smoothing at extra zoom levels not working.
 - Fix: [#14493] [Plugin] isHidden only works for tile elements up to the first element with a base height of over 32.
 - Fix: [#14604] American-style Steam Trains are not imported correctly from RCT1 saves.
+- Fix: [#14638] The “About OpenRCT2” window cannot be themed.
 
 0.3.3 (2021-03-13)
 ------------------------------------------------------------------------
